[package]
name = "tjiftjaf"
version = "0.4.0"
edition = "2024"
license-file = "LICENSE" 
description = "Library including an encoder and decoder for MQTT v3.1.1. It also includes a client."

[dependencies]
async-channel = { version = "2", optional = true, default-features = false, features = ["std"] }
async-io = { version = "2", optional = true, default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
futures-lite = { version = "2", optional = true, default-features = false, features = ["std", "race"] }
log = "0.4"
arbitrary = { version = "1", optional = true, features = ["derive"] }
mio = { version = "1.0", optional = true, default-features = false, features = ["log", "os-poll", "net"] }


[dev-dependencies]
simple_logger = "5.0.0"
macro_rules_attribute = "0.2.2"
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
rumqttd = { version = "0.19.0", default-features = false }
smol-macros = "0.1.1"
async-net = { version = "2.0.0", default-features = false }
smol = { version = "2.0.2", default-features = false }

[features]
default = ["async"]
blocking = ["async-channel", "mio"]
async = ["async-channel", "async-io", "futures-lite"]

[[example]]
name = "blocking_client"
required-features = ["blocking"]

[[example]]
name = "client"
required-features = ["async"]

[package.metadata.docs.rs]
all-features = true
