[package]
name = "tjiftjaf"
version = "0.7.1"
edition = "2021"
rust-version = "1.79.0"
license-file = "LICENSE" 
description = "Library including an encoder and decoder for MQTT v3.1.1. It also includes a client."

[dependencies]
async-channel = { version = "2", optional = true, default-features = false, features = ["std"] }
async-io = { version = "2", optional = true, default-features = false }
log = "0.4"
arbitrary = { version = "1", optional = true, features = ["derive"] }
mio = { version = "1.0", optional = true, default-features = false, features = ["log", "os-poll", "net"] }
async-net = { version = "2", optional = true }
futures = { version = "0.3.31", optional = true , default-features = false, features = ["async-await", "std"]}
smol = { version  = "2", optional = true}

[dev-dependencies]
simple_logger = "5.0.0"
macro_rules_attribute = "0.2.2"
futures-lite = { version = "2", default-features = false, features = ["std", "race"] }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
rumqttd = { version = "0.19.0", default-features = false }
smol-macros = "0.1.1"
async-net = { version = "2.0.0", default-features = false }
smol = { version = "2.0.2", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["net", "macros", "rt"] }
tokio-util = { version = "0.7.17", default-features = false, features = ["compat" ] }
criterion = "0.5"

[[bench]]
name = "decode-encode"
harness = false


[features]
default = ["async"]
blocking = ["async-channel", "mio"]
async = ["async-channel", "async-io", "futures"]
experimental = ["futures"]

[[example]]
name = "blocking_client"
required-features = ["blocking"]

[[example]]
name = "client_with_smol"
required-features = ["async"]

[[example]]
name = "client_with_tokio"
required-features = ["async"]

[[example]]
name = "server"
required-features = ["async", "experimental"]

[package.metadata.docs.rs]
all-features = true
