[package]
name = "tjiftjaf-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tjiftjaf = { path = "..", features = ["arbitrary"] }

[[bin]]
name = "subscribe"
path = "fuzz_targets/fuzz_subscribe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "connect"
path = "fuzz_targets/fuzz_connect.rs"
test = false
doc = false
bench = false
